# libwaveform

./: AUTHORS  Makefile.am  README  README.md  TODO  configure.ac
demo/: demo.py  level-reading-test.c  level-reading-test.py  sample_stats.ods
po/: POTFILES.in
src/: Makefile.am  libwaveform-0.1.pc.in  libwaveform.h  libwaveform.pc.in  waveform.h  waveformdata.c  waveformdata.h  waveformlevelreading.c  waveformlevelreading.c~  waveformlevelreading.h  waveformlevelreading.h~  waveformreader.c  waveformreader.h  waveformwidget.c  waveformwidget.h
tests/: level-reading-test.c  level-reading-test.py
